--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,6 +353,7 @@ a {
     border: 16px solid #EAF6FF;
     padding: 45.23px 42px 43px 42px;
     border-radius: 4px;
+    transition: 0.25s;
 }
 
 .howitwork-item:hover {
