--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,3 +388,206 @@ a {
     line-height: 28px;
     color: #575F66;
 }
+
+/* Feature */
+.feature {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+
+.feature__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 130px;
+}
+
+.feature__media {
+    width: 48%;
+}
+
+.feature__images {
+    position: relative;
+    padding-bottom: 121px;
+}
+
+.feature__img {
+    width: 512px;
+    height: 370px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.feature__img--small {
+    position: absolute;
+    bottom: 0;
+    left: 238px;
+    width: 322px;
+    height: 370px;
+    object-fit: cover;
+}
+
+.feature__heading {
+    text-align: left;
+    width: 470px;
+}
+
+.feature__desc {
+    margin: 18px 0 0 0;
+    text-align: left;
+}
+
+.feature__btn {
+    margin-top: 53px;
+}
+
+/* Member */
+
+.member {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+
+.member__header {
+    text-align: center;
+}
+
+.member-cta {
+    margin-top: 38px;
+}
+
+.member__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    margin-top: 70px;
+}
+
+.member-item__img-bg {
+    padding: 28px 4px 0 4px;
+    background: #EAF6FF;
+    border-radius: 6px;
+}
+
+.member-item__thumb {
+    display: block;
+}
+
+.member-item__name {
+    margin-top: 12px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 28px;
+    text-align: center;
+    color: #10375C;
+}
+
+.member-item__desc {
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 26px;
+    text-align: center;
+    color: #575F66;
+}
+
+.member__control {
+    margin-top: 38px;
+    text-align: center;
+}
+
+.member__control-btn {
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    border: 1px solid #575F66;
+    text-align: center;
+    line-height: 38px;
+    background-color: #FFFFFF;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.member__control-btn:hover {
+    background: #2E80CE;
+    border: 1px solid #2E80CE;
+}
+
+.member__control-icon {
+    stroke: #575F66;
+}
+
+
+.member__control-btn:hover .member__control-icon {
+    stroke: #FFFFFF;
+}
+
+.member__control-btn-right {
+    margin-left: 18px;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+/* Install  */
+
+.install {
+    margin: 90px 0;
+    padding: 85px 0;
+}
+
+.install-row {
+    display: flex;
+    align-items: center;
+    gap: 160px;
+    padding: 0 70px;
+    background: #2E80CE;
+    border-radius: 4px;
+}
+
+.install__img {
+    margin-top: -95px;
+    display: block;
+}
+
+.install-info {
+    max-width: 586px;
+}
+
+.install-heading {
+    width: 489px;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.install-desc {
+    width: 100%;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.install-apps {
+    margin-top: 38px;
+    display: flex;
+    align-items: center;
+    gap: 28px;
+}
+
+.install__item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 4px 8px;
+    border: 1px solid #FFFFFF;
+    border-radius: 5px;
+}
+
+.install__item-desc {
+    color: #FFFFFF;
+    font-size: 0.9rem;
+}
+
+.install__item-appname {
+    margin-top: 4px;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
